@@ -1,6 +1,10 @@
 VERSION HISTORY
 ================
 
+v?
+* prng: use simplistic axRand() by default, more compilcated prngs are enabled
+        with a flag.
+
 v0.1.1 - 230610
 + ladspa: added support for ladspa (win32 & linux)
 + extern/mverb: added open source (gpl) reverb engine by martin eastwood
